[tool.poetry]
name = "deep_rl_gym"
version = "0.1.0"
description = "Sandbox environments for testing various DeepRL methodologies"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deep_rl_gym"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
numpy = "^1.26.2"
jupyter = "^1.0.0"
gymnasium = "^0.29.1"
mujoco-py = "^2.1.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
